# vesselme

./: README.md  VesselMe.spec  bunch.py  main.py  pyproject.toml  requirements.txt  spec.md
docs/: NEXT.md  README.md  START_HERE.md  WIKI.md
vesselme/: main.py
vesselme/ai_backends/: __init__.py
vesselme/ai_backends/fr_unet/: __init__.py  classical_vessel.py  install.py  model.py  runner.py
vesselme/ai_backends/lwnet/: __init__.py  install.py  runner.py
vesselme/ai_backends/u2net_e/: __init__.py  install.py  runner.py
vesselme/core/: history.py
vesselme/data/: i18n_zh_CN.json  io.py  models.py  settings.py
vesselme/services/: auto_segment_service.py  label_service.py  model_runtime_manager.py  project_service.py
vesselme/ui/: canvas_widget.py  icons.py  main_window.py
vesselme/utils/: qt.py
